# robotframework-github-actions-demo

./: .gitignore  .pabotsuitenames  .pre-commit-config.yaml  argfile.txt  config.yaml  format.sh  format_experiment.sh  pyproject.toml  requirments.txt
.github/workflows/: ci.yml
Results/: log.html  output.xml  report.html
Tests/: Site.robot
tests/: site.robot  site2.resource
