[tool.poetry]
name = "robot-github-actions"
version = "0.1.0"
description = ""
authors = ["edmeister <koed.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
robotframework-tidy = "^4.9.0"
pre-commit = "^3.6.0"
robotframework-seleniumlibrary = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
